# libarchive

./: .cirrus.yml  .gitignore  CMakeLists.txt  Makefile.am  NEWS  configure.ac  sonar-project.properties
.github/workflows/: analyze.yml  ci.yml
contrib/: libarchive.copr.spec  libarchive.spec
libarchive/: archive.h  archive_entry.c  archive_entry.h  archive_entry_private.h  archive_write.c  archive_write_disk_posix.c  archive_write_disk_windows.c  archive_write_set_format_zip.c
libarchive/test/: CMakeLists.txt  test_read_format_rar5.c  test_read_format_xar_xattr_name_nullptr.c  test_read_format_xar_xattr_name_nullptr.xar.uu
tar/: read.c
test/: CMakeLists.txt  archivetest.c
test_utils/: test_common.h  test_main.c
